12336 list of posts (#12678)
* Issue #12336 - Dependent field ajax callback.

* Issue #12336 - List fo Posts additonal fields and display modes. WIP

* Issue #12336 - code added for lop form ui

* Issue #12336 - lop form fields width

* Issue #12336 - Form changes and Logic for appear/expire fields.

* Issue #12336 - Form changes and Logic for appear/expire fields.

* Issue #12336 - Events addtional logic for sorting and filtering.

* Issue #12336 - Events addtional logic for sorting and filtering.

* Issue #12336 - Additional sorting for Events,Publication,etc

* Issue #12336 - Required display modes.

* Issue #12336 - added ui changes for lop

* Issue #12336 - New Tests for newer sorting methods and code.

* Issue #12336 - Display style changes and test seggregation.

* Issue #12336 - Test fixes.

* Issue #12336 - added faq and events styles and fixed code review

* Issue #12336 - config changes added label to inline

* Issue #12336 - added publication template and fixed code review

* Issue #12336 - changed image position in slide teaser publication

* Issue #12336 - Test seggregation.

* Issue #12336 - Hiding field labels.

* Issue #12336 - publication citation ui

* Issue #12336 - LOP default values.

* Issue #12336 - News query fix.

* Issue #12336 - Sticky at the top functionality and test.

* Issue #12336 - increased widget form width and fixed field width

* Issue #12336 - fixed field with lop form fields

* Issue #12336 - Form fix and making query field more specific.

* Issue #12336 - Form fix and making query field more specific.

--- a/profile/modules/apps/os_widgets/css/os_widgets.lop.css
+++ b/profile/modules/apps/os_widgets/css/os_widgets.lop.css
@@ -4,7 +4,6 @@
 }
 .lop-details .form-group.form-wrapper > .form-wrapper {
   padding-right: 10px;
-  width: 25%;
 }
 .lop-details .panel-body .form-group.form-wrapper .field--name-field-publication-types {
   width: 100%;
@@ -13,4 +12,7 @@
   border: 0;
   padding: 0;
   box-shadow: 0;
+}
+.block-list-of-posts-form .form-type-select label {
+  display: block;
 }
