Issue #12456 - Tabs & accordion widget corrected. (#12672)
* Issue #12456 - Tabs & accordion widget corrected.

* Issue #12456 - Removed extra lines.

* Issue #12456 - Added hook_entity_delete to handle deleted widgets.

* Issue #12456 - Pushing incomplete code for entity_delete.

* Issue #12456 - Tab and accordion widgets references added.

* Issue #12456 - Fixed null rows in tabs & accordion widget.

* Issue #12456 - collapsing when other panel open and fixed sign issues

* Issue #12456 - Patch for contextual links issue on same elements on page.

* Issue #12456 - Moved accordion library from twig.

* Issue #12456 - Tests added after deleting Tabs child block entities.

* Issue #12456 - Patch for contextual links.

* Issue #12456 - Added validation for block.

* Issue #12456 - Removed check for block.

* Issue #12456 - Resolved rssfeedTests error.

--- a/profile/modules/apps/os_widgets/templates/os-widgets-accordion.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-accordion.html.twig
@@ -22,7 +22,7 @@
       {% endif %}
       <div class="panel-heading" role="tab">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse-{{ key }}" aria-controls="#collapse-{{ key }}">{{ content.section_title }} <i class="more-less glyphicon {{icon}}"></i> </a>
+          <a data-toggle="collapse" data-parent="#accordion-{{ bid }}" data-target="#collapse-{{ key }}" aria-controls="#collapse-{{ key }}">{{ content.section_title }} <i class="more-less glyphicon {{icon}}"></i> </a>
         </h4>
       </div>
       <div id="collapse-{{ key }}" class="panel-collapse collapse {{ collapseAll }}" role="tabpanel">
