12518 view all rss feeds (#12706)
* Issue #12518 - Created a controller and template for rss feeds

* Issue #12518 - added rss page ui

* Issue #12518 - Listed the apps and removed custom route check

* Issue #12518 - Listed apps for RSS and removed custom access check

* Issue #12518 - Created a controller and template for rss feeds

* Issue #12518 - added rss page ui

* Issue #12518 - Listed the apps and removed custom route check

* Issue #12518 - Listed apps for RSS and removed custom access check

* Issue #12518 - Created Custom RSS Feed

* Issue #12518 - Added dynamic value to xml, resolved cache issue, Made PR review changes

* Issue #12518 - Fixed taxonomy url

* Issue #12518 - Added xml attributes to RSS Feeds

* Issue #12518 - Added xml attributes to RSS Feeds

* Issue #12518 - Disabled frontpage rss view

* Issue #12518 - Made PR changes and Added publication entity to RSS Feeds and listing

* Issue #12518 - Added new functional test for RSS listing page

* Issue #12518 - Made PR chanages to RSS listing functional test

* Issue #12518 - Added test to check rss xml feeds

* Issue #12518 - Few missing changes

* Issue #12518 - Added core extension file and coding standard changes

* Issue #12518 - OS RSS Build install issue

* Issue #12518 - Consolidated pulications on RSS listing page and group content fix

* Issue #12518 - Changed taxonomy term listing on RSS Feeds

* Issue #12518 - RSS Feeds test case changes for new layout

* Issue #12518 - RSS Feed PR changes

--- a/profile/modules/os/modules/os_rss/templates/os-rss-page.html.twig
+++ b/profile/modules/os/modules/os_rss/templates/os-rss-page.html.twig
@@ -17,16 +17,18 @@
       {% for url in apps %}
         <li>{{url}}</li>
       {% endfor %}
-      {% for url in publications %}
-        <li>{{url}}</li>
-      {% endfor %}
     </ul>
   </div>
   <h2 class="feed-title">{{ "Categories"|t }}</h2>
   <div class="item-list">
     <ul class="feed-items">
-      {% for url in categories %}
-        <li>{{url}}</li>
+      {% for vocabulary,terms in categories %}
+      <h2 class="feed-title">{{ vocabulary }}</h2>
+        <ul>
+          {% for url in terms %}
+            <li>{{url}}</li>
+          {% endfor %}
+        </ul>
       {% endfor %}
     </ul>
   </div>
