Issue #12676 - suppport role (#12692)
* Issue #12676 - Added new role suppport team and group role support user

* Issue #12676 - Created workflow for supporting vsite

* Issue #12676 - Added description to confirmation form

* Issue #12676 - Added custom access checker and PR changes

* Issue #12676 - Toolbar link changes

* Issue #12676 - Support role PR changes

* Issue #12676 - Added cron functionality to expire support users

* Issue #12676 - Changes for support user on Cp users

* Issue #12676 - Added kernel test for SupportVsite access checker

* Issue #12676 - added new subscribe image to support this site

* Issue #12676 - changed sprite name

* Issue #12676 - Fuctional test for support role and PR changes

* Issue #12676 - Changed to entity query for suport user cron and PR changes

* Issue #12676 - added supported for all group type and other pr changes

* Issue #12676 - Support role PR changes

--- a/profile/libraries/os-toolbar/os-toolbar.scss
+++ b/profile/libraries/os-toolbar/os-toolbar.scss
@@ -108,19 +108,22 @@ $color-black: #000;
           }
         }
         .account a:before {
-          background-position: -10px -160px;
+          background-position: -10px -162px;
         }
         .account-edit a:before {
-          background-position: -10px -41px;
+          background-position: -10px -43px;
         }
         .logout a:before {
-          background-position: -10px -81px;
+          background-position: -10px -83px;
         }
         .twitter:before {
-          background-position: -10px -120px;
+          background-position: -10px -123px;
         }
         .site-create a:before{
-          background-position: -10px 0px;
+          background-position: -10px -4px;
+        }
+        .support-site a:before {
+          background-position: -10px -200px;
         }
       }
     }
