Issue #12630 - search page css

--- a/profile/themes/os_base/scss/style.scss
+++ b/profile/themes/os_base/scss/style.scss
@@ -23,6 +23,7 @@
 @import 'pages/publications';
 @import 'pages/user';
 @import 'pages/page';
+@import 'pages/search';
 
 //layout styles
 @import 'layout/footer';
