Issue #12584 - Refactor to handle pdf with browser embed pdf viewer (#12726)
* Issue #12584 - Refactor to handle pdf with browser embed pdf viewer

* Issue #12584 - Fix deprecated function

* Issue #12584 - Create a new media type to handle specific extensions for presentation content type

--- a/profile/modules/apps/os_office_embed/templates/os-office-embed.html.twig
+++ b/profile/modules/apps/os_office_embed/templates/os-office-embed.html.twig
@@ -4,7 +4,7 @@
  * Default theme implementation for the Embedded Office Documents Viewer field formatter.
  *
  * Available variables:
- * - url: The publicly accessible url at which the embedded document may be reached.
+ * - iframe_url: Embed iframe url.
  * - filename: The original file name of the embedded document.
  * - width: Width settings.
  * - height: Height settings.
@@ -18,4 +18,4 @@
  * @ingroup themeable
  */
 #}
-<iframe class="os-office-embed" width="{{ width }}" height="{{ height }}" src="https://view.officeapps.live.com/op/embed.aspx?src={{ url }}"></iframe>
+<iframe class="os-office-embed" width="{{ width }}" height="{{ height }}" src="{{ iframe_url }}"></iframe>
