Issue #12729 - fixed select box height (#12730)
* Issue #12729 - fixed select box height

* Issue #12729 - fixed tabs issue and navbar padding

--- a/profile/themes/modern/scss/components/_header.scss
+++ b/profile/themes/modern/scss/components/_header.scss
@@ -1,6 +1,6 @@
 /******** header **************/
 header {
-  background: $color-gray;
+  background: $color-gray2;
   color: $color-white;
 }
 /**** header container ****/
