--- a/profile/themes/os_base/scss/component/_tabs.scss
+++ b/profile/themes/os_base/scss/component/_tabs.scss
@@ -154,6 +154,7 @@ ul.nav-tabs {
         border-right: 0;
         border-radius: 0;
         margin: 0;
+        cursor: pointer;
         .field {
           margin-bottom: 0;
         }
