Issue #12750 - fixed a11y fixes in tabs and accordion widget (#12757)
* Issue #12750 - fixed a11y fixes in tabs and accordion widget

* Issue #12750 - tabs ui

* Issue #12750 - fixed a11y fixes onepage theme tabs

--- a/profile/modules/apps/os_widgets/templates/os-widgets-tabs.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-tabs.html.twig
@@ -15,7 +15,7 @@
     {% if loop.first %}
       {% set activeClass = 'active'  %}
     {% endif %}
-      <li class="{{ activeClass }}" role="tab"><a data-toggle="tab" data-target="#tab-{{ key }}" aria-controls="tab-{{ key }}">{{ content.section_title }}</a></li>
+      <li class="{{ activeClass }}" role="tab"><a role="button" href="#tab-{{ key }}" data-toggle="tab" data-target="#tab-{{ key }}" aria-controls="tab-{{ key }}">{{ content.section_title }}</a></li>
   {% endfor %}
 </ul>
 <div class="tab-content">
