--- a/profile/themes/hwpi_college/scss/style.scss
+++ b/profile/themes/hwpi_college/scss/style.scss
@@ -14,5 +14,6 @@
 @import 'components/search';
 @import 'components/calendar';
 @import 'components/taxonomy-widget';
+@import 'components/tabs';
 
 @import 'pages/search';
