--- a/profile/themes/modern/scss/components/_tabs.scss
+++ b/profile/themes/modern/scss/components/_tabs.scss
@@ -1,13 +1,4 @@
 /**** tabs widget ****/
-/**** code needs to be replaced with d8 structure ****/
-.ui-tabs .ui-tabs-nav li a {
-  text-transform: capitalize;
-  font-size: 14px;
-}
-.ui-tabs ul.ui-tabs-nav li.ui-tabs-active a {
-  border-bottom-width: 1px;
-  color: $color-white;
-}
  .block--type-tabs {
   .nav-tabs {
     border-bottom: 0;
@@ -16,6 +7,7 @@
         a {
           color: $color-white;
           border-bottom-width: 1px;
+          background: $color-red2;
         }
       }
       a {
