--- a/profile/themes/vibrant/scss/base/_variables.scss
+++ b/profile/themes/vibrant/scss/base/_variables.scss
@@ -18,4 +18,6 @@ $color-light-gray9: #f8f8f8;
 $color-blue: #57ACFF;
 $color-blue1: #65ACFF;
 $color-blue2: #1b4977;
+$color-blue3: #5090C8;
+$color-blue4: #2A68AC;
 $color-red: #A51C30;
