--- a/profile/themes/vibrant/scss/style.scss
+++ b/profile/themes/vibrant/scss/style.scss
@@ -12,6 +12,7 @@
 @import 'component/search';
 @import 'component/calendar';
 @import 'component/taxonomy-widget';
+@import 'component/tabs';
 
 @import 'global/global';
 
