--- a/profile/themes/everett/scss/style.scss
+++ b/profile/themes/everett/scss/style.scss
@@ -1,6 +1,7 @@
 @import '../../os_base/scss/base/breakpoints';
 @import '../../os_base/scss/mixins/pager';
 @import '../../os_base/scss/mixins/navbar';
+@import '../../os_base/scss/mixins/tab';
 
 @import './base/variables';
 @import './base/common';
@@ -12,4 +13,6 @@
 @import './components/search';
 @import './components/sidebar';
 @import './components/pager';
+@import './components/tabs';
+
 @import './global/global';
