--- a/profile/themes/holyoke/scss/base/_variables.scss
+++ b/profile/themes/holyoke/scss/base/_variables.scss
@@ -5,6 +5,7 @@ $color_goldenrod_approx: #ffdb6d;
 $color_pizza_approx: #c4961a;
 $color_steel_blue_approx: #4e84c4;
 $white: #fff;
+$black: #000;
 $color_wheatfield_50_approx: rgba(244, 237, 202, 0.5);
 $color_outer_space_approx: #283645;
 
