--- a/profile/themes/kirkland/scss/style.scss
+++ b/profile/themes/kirkland/scss/style.scss
@@ -1,5 +1,6 @@
 @import '../../os_base/scss/base/breakpoints';
 @import '../../os_base/scss/mixins/navbar';
+@import '../../os_base/scss/mixins/tab';
 
 @import './base/variables';
 @import './base/common';
@@ -9,4 +10,5 @@
 @import './components/header';
 @import './components/navbar';
 @import './components/sidebar';
+@import './components/tabs';
 @import './global/global';
