--- a/profile/themes/saffron_accents/scss/style.scss
+++ b/profile/themes/saffron_accents/scss/style.scss
@@ -1,5 +1,6 @@
 @import '../../os_base/scss/base/breakpoints';
 @import '../../os_base/scss/mixins/navbar';
+@import '../../os_base/scss/mixins/tab';
 
 @import './base/variables';
 @import './base/base';
@@ -8,5 +9,7 @@
 @import './components/navbar';
 @import './components/search';
 @import './components/sidebar';
+@import './components/tabs';
+
 @import './global/global';
 @import './../../os_base/scss/base/poweredby_common';
