--- a/profile/themes/white/scss/base/_variables.scss
+++ b/profile/themes/white/scss/base/_variables.scss
@@ -5,7 +5,7 @@ $color_masala_approx: #3d3d3d;
 $color_tundora_approx: #444;
 $color_mine_shaft_approx: #333333;
 $color_st_tropaz_approx: #215990;
-
+$color-red: #a41b2f;
 //fonts
 $font_0: Open Sans;
 $font_1: Helvetica;
