Issue #12577 - added basic configs and css for slidehsow (#12600)
* Issue #12577 - added basic configs and css for slidehsow

* Issue #12577 - added slideshow below css, ui added for add new slide

* Issue #12577 - changed slider caption position as per selected option

* Issue #12577 - config changes

* Issue #12577 - slideshow widget title and description label hidden and ui changes

* Issue #12577 - fixed variable and added slide to next and prev aria label

* Issue #12577 - fixed test

--- a/profile/themes/os_base/scss/base/_variables.scss
+++ b/profile/themes/os_base/scss/base/_variables.scss
@@ -22,6 +22,7 @@ $color-light-gray13: #959595;
 $color-light-gray14: #EBE3DF;
 $color-light-gray15: #e3e3e1;
 $color-light-gray16: #efefef;
+$color-light-gray17: #999999;
 $color-black1: #1e1e1e;
 $color-link1: #215990;
 $color-link2: #2769AC;
@@ -29,3 +30,5 @@ $color-blue: #4E84C4;
 $color-yellow: #fc0;
 $color-green: #1E7D34;
 $color-danger: #bf1722;
+$color-caption: rgba(30, 30, 30, 0.62);
+$color-caption1: rgba(0, 0, 0, 0.85);
