--- a/profile/themes/os_base/scss/_overrides.scss
+++ b/profile/themes/os_base/scss/_overrides.scss
@@ -37,6 +37,7 @@
 @import "component/theme-preview";
 @import "component/mailchimp";
 @import "component/wysiwyg";
+@import "component/widget-slideshow";
 @import "component/list-of-posts";
 @import "component/accordion";
 @import "component/list-of-files";
