Issue #11096 - onepage theme layout and lop widget alignment (#12766)
* Issue #11096 - onepage theme layout and lop widget alignment

* Issue #11096 - added fixed menu to onepage

* Issue #11096 - add lop scss file

* Issue #11096 - fixed a11y issues

* Issue #11096 - fixed pr points

--- a/profile/themes/onepage/scss/style.scss
+++ b/profile/themes/onepage/scss/style.scss
@@ -12,6 +12,7 @@
 @import 'components/calendar';
 @import 'components/header';
 @import 'components/footer';
+@import 'components/lop';
 @import 'components/tabs';
 
 @import './../../os_base/scss/base/poweredby_common';
