--- a/profile/themes/onepage/scss/base/_global.scss
+++ b/profile/themes/onepage/scss/base/_global.scss
@@ -81,7 +81,23 @@ h2.block-title {
     padding: 10px 0 30px;
   }
 }
+/**** widget width****/
+.path-front {
+  .block-block-content {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .slideshow-layout-3-1-overlay {
+    min-width: 1800px;
+    width: 100%;
+    margin: 0 auto;
+  }
+}
 /**** a11y ****/
 .sr-only {
   color: transparent;
+}
+.trigger {
+  color: $color-black;
 }
