Issue #10897 - added edit and del icon to actions media page

--- a/profile/themes/os_admin/scss/global/_global.scss
+++ b/profile/themes/os_admin/scss/global/_global.scss
@@ -12,3 +12,11 @@
 .add-user-dialog {
   top: 50px !important;
 }
+/**** media page ****/
+td.manage-media {
+  a{
+    &:first-child {
+      margin-right: 10px;
+    }
+  }
+}
