Issue #12774 - fixed place block height issue (#12775)

--- a/profile/themes/os_base/scss/component/_widgtes.scss
+++ b/profile/themes/os_base/scss/component/_widgtes.scss
@@ -58,6 +58,7 @@
 #factory-wrapper {
   background-color: $color-light-gray9;
   z-index: 999;
+  overflow-y: scroll;
   .close {
     float: none;
     font-size: 21px;
