--- a/profile/themes/os_base/templates/node/node--person--full.html.twig
+++ b/profile/themes/os_base/templates/node/node--person--full.html.twig
@@ -72,12 +72,23 @@
  * @ingroup themeable
  */
 #}
+{%
+  set classes = [
+    node.bundle|clean_class,
+    node.isPromoted() ? 'is-promoted',
+    node.isSticky() ? 'is-sticky',
+    not node.isPublished() ? 'is-unpublished',
+    view_mode ? view_mode|clean_class,
+    'clearfix',
+  ]
+%}
+
 <div class="person--title">
   <h1>{{ node.label }}</h1>
   {{content.field_professional_titles}}
 </div>
 
-<article{{ attributes }}>
+<article{{ attributes.addClass(classes) }}>
 
   {{ title_prefix }}
   {% if not page %}
