--- a/profile/themes/onepage/scss/base/_global.scss
+++ b/profile/themes/onepage/scss/base/_global.scss
@@ -88,10 +88,29 @@ h2.block-title {
     width: 100%;
     margin: 0 auto;
   }
-  .slideshow-layout-3-1-overlay {
+  .slideshow-layout-3-1-overlay,
+  .block--type-embed-media {
     min-width: 1800px;
     width: 100%;
     margin: 0 auto;
+    .widget--slideshow{
+      .slide-caption {
+        margin: 2% auto 0;
+        padding: 25px;
+      }
+    }
+    .slick__arrow {
+      right: auto;
+      width: 100%;
+      .slick-dots {
+        width: auto;
+      }
+    }
+  }
+  .widget--slideshow-main {
+    img {
+      width: 100%;
+    }
   }
 }
 /**** a11y ****/
