--- a/profile/themes/os_base/scss/component/_widget-slideshow.scss
+++ b/profile/themes/os_base/scss/component/_widget-slideshow.scss
@@ -77,6 +77,12 @@
     bottom: 20px;
     right: 20px;
     display: flex;
+    height: auto;
+    width: auto;
+    top: auto;
+    left: auto;
+    margin-top: 0;
+    transform: initial;
     @at-root .slideshow-layout-16-9-below#{&}, .slideshow-layout-16-9-overlay#{&} {
       left: 20px;
       right: auto;
@@ -87,6 +93,15 @@
       border: 0;
       color: $color-white;
       padding: 5px;
+      width: auto;
+      font-size: initial;
+      position: initial;
+      transform: inherit;
+      border-radius: 0;
+      &:before {
+        content: "";
+        font-size: initial;
+      }
     }
     .slick-dots {
       display: flex;
@@ -95,6 +110,7 @@
       justify-content: center;
       background: $color-black;
       min-height: 30px;
+      position: unset;
       li {
         margin: 0 2px;
         button {
@@ -108,6 +124,9 @@
           text-indent: -9999px;
           margin: 0 1px;
           color: $color-black;
+          &:focus {
+            @include focus();
+          }
         }
         &.slick-active {
           button {
