--- a/profile/themes/os_base/scss/pages/_news.scss
+++ b/profile/themes/os_base/scss/pages/_news.scss
@@ -2,10 +2,17 @@
   .teaser--image {
     float: left;
     margin: 0 1.5em .5em 0;
+    .field--name-field-photo-person,
+    .person-default-image {
+      margin: 0;
+    }
   }
   .teaser--content {
     overflow: hidden;
     margin-top: 0;
+    ul[id^="list-of-posts"] & {
+      overflow: visible;
+    }
   }
 }
 article.news {
