Issue #11096 - changed library version (#12797)
* Issue #11096 - changed library version

* Issue #11096 - changed library version and slideshow side width fixed

--- a/profile/themes/onepage/scss/base/_global.scss
+++ b/profile/themes/onepage/scss/base/_global.scss
@@ -112,6 +112,13 @@ h2.block-title {
       width: 100%;
     }
   }
+  .slideshow-layout-16-9-side {
+    .widget--slideshow {
+      img {
+        width: 55%;
+      }
+    }
+  }
 }
 /**** a11y ****/
 .sr-only {
