--- a/profile/modules/vsite/modules/vsite_site_creation/templates/os_site_creation.html
+++ b/profile/modules/vsite/modules/vsite_site_creation/templates/os_site_creation.html
@@ -1,4 +1,4 @@
-<div id="site-creation-container">
+<div id="site-creation-container" title="Create Site">
 	<form name="siteCreationform">
 		<!-- Screen 1 Start -->
 		<div id="page-1" ng-show="page1">
@@ -49,6 +49,7 @@
 							<div class="url-selector">
 								<span>{{baseURL}}</span>
 								<span>
+									<label class="visually-hidden" for="individual-scholar">Individual Scholar</label>
 									<input type="text" name="individualScholar" ng-model="individualScholar" formcheck-directive ng-keyup="clearRest('individualScholar');" id="individual-scholar" class="form-text">
 								</span>
 							</div>
@@ -77,6 +78,7 @@
 							<div class="url-selector">
 								<span>{{baseURL}}</span>
 								<span>
+									<label class="visually-hidden" for="project-lab-small-group">Project/Lab/Small Group</label>
 									<input type="text" name="projectLabSmallGroup" ng-model="projectLabSmallGroup" formcheck-directive ng-keyup="clearRest('projectLabSmallGroup');" id="project-lab-small-group" class="form-text">
 								</span>
 							</div>
@@ -105,6 +107,7 @@
 							<div class="url-selector">
 								<span>{{baseURL}}</span>
 								<span>
+									<label class="visually-hidden" for="department-school">Department School</label>
 									<input type="text" name="departmentSchool" ng-model="departmentSchool" formcheck-directive ng-keyup="clearRest('departmentSchool');" id="department-school" class="form-text">
 								</span>
 							</div>
@@ -147,29 +150,25 @@
 					<div class="user-creation-popup panel-heading" ng-show="userCreationOptional" ng-click="showUserCreation = !showUserCreation">Register Account</div>
 					<div class ="popup panel-body" ng-show="showUserCreation">
 						<div class = "popup">
-							<div><b>Desired user name</b></div>
-							<div><input type="text" ng-model="userName" class="form-text form-text-mini" ng-blur="checkUserName()" autocomplete="new-password"></div>
+							<div><label for="desiredUserName">Desired user name</label><input type="text" id="desiredUserName" ng-model="userName" class="form-text form-text-mini" ng-blur="checkUserName()" autocomplete="new-password"></div>
 							<div class="message error" ng-show="showUserError" ng-bind-html="userErrorMsg"></div>
 							<div>Spaces are allowed; punctuation is not allowed except for periods, hyphens, and underscores.</div>
 						</div>
 						<div class = "popup">
-							<div><b>First name</b></div>
-							<div><input type="text" ng-model="fname" class="form-text form-text-mini"></div>
+							<div><label for="firstName">First name</label><input type="text" ng-model="fname" id="firstName" class="form-text form-text-mini"></div>
 						</div>
 						<div class = "popup">
-							<div><b>Last name</b></div>
-							<div><input type="text" ng-model="lname" class="form-text form-text-mini"></div>
+							<div><label for="lastName">Last name</label><input type="text" id="lastName" ng-model="lname" class="form-text form-text-mini"></div>
 						</div>
 						<div class = "popup">
-							<div><b>Email address</b></div>
-							<span><input type="text" ng-model="email" class="form-text form-text-mini" ng-blur="checkEmail()"></span>
+							<span><label for="emailAddress">Email address</label><input type="text" ng-model="email" id="emailAddress" class="form-text form-text-mini" ng-blur="checkEmail()"></span>
 							<div class="message error" ng-show="showEmailError" ng-bind-html="emailErrorMsg"></div>
 							<div>A valid e-mail address is required. All e-mails from OpenScholar will be sent to this address.</div>
 						</div>
 						<div class = "popup">
-							<div><b>Password</b></div>
 							<div class="form-text-mini">
-								<input type="password" ng-model="password" class="form-text form-text-micro" autocomplete="new-password" ng-blur="checkPwd()">
+								<label for="password">Password</label>
+								<input type="password" id="password" ng-model="password" class="form-text form-text-micro" autocomplete="new-password" ng-blur="checkPwd()">
 								<div class="message error" ng-show="showPwdError" ng-bind-html="pwdErrorMsg"></div>
 								<div class="password-strength-text">
 									<div>Password compliance: {{strength}}</div>
@@ -178,8 +177,7 @@
 							</div>
 						</div>
 						<div class = "popup">
-							<div><b>Confirm password</b></div>
-							<div class="form-text-mini"><input type="password" ng-model="confirmPwd" class="form-text form-text-micro" autocomplete="off"><div class="password-strength-text">Password match : {{pwdMatch()}}</div>
+							<div class="form-text-mini"><label for="confirmPassword">Confirm password</label><input type="password" id="confirmPassword" ng-model="confirmPwd" class="form-text form-text-micro" autocomplete="off"><div class="password-strength-text">Password match : {{pwdMatch()}}</div>
 							</div>
 						</div>
 					</div>
@@ -399,7 +397,7 @@
 							<h3>Mobile-friendly themes with horizontal homepage regions. <a href="http://docs.openscholar.harvard.edu/one-page-themes">How to use these themes.</a>.</h3>
 							<ul>
 							<li ng-repeat="theme in themes.single" ng-class="{even: $even, odd: $odd, selected: selected == theme.themeKey}" class="cp-themes {{theme.themeKey}}" ng-click="setTheme(theme.themeKey)">
-								<img ng-src="{{theme.screenshot}}" class="screenshot">
+								<img ng-src="{{theme.screenshot}}" class="screenshot" alt="{{theme.alt}}">
 								<div class="theme-info">
 									<span>{{theme.name}}</span>
 									<div ng-if="theme.flavorOptions.length > 0" class="cp-appearance-flavor-list">
@@ -417,7 +415,7 @@
 							<h3>Mobile-friendly themes using university color palettes.</h3>
 							<ul>
 							<li ng-repeat="theme in themes.featured" ng-class="{even: $even, odd: $odd, selected: selected == theme.themeKey}" class="cp-themes {{theme.themeKey}}" ng-click="setTheme(theme.themeKey)">
-								<img ng-src="{{theme.screenshot}}" class="screenshot">
+								<img ng-src="{{theme.screenshot}}" class="screenshot" alt="{{theme.alt}}">
 								<div class="theme-info">
 									<span>{{theme.name}}</span>
 									<div ng-if="theme.flavorOptions.length > 0" class="cp-appearance-flavor-list">
