--- a/profile/themes/os_base/scss/component/_site-creation.scss
+++ b/profile/themes/os_base/scss/component/_site-creation.scss
@@ -43,5 +43,11 @@
   }
   .user-creation-popup {
     color: $color-link1;
+    cursor: pointer;
+  }
+}
+#body-container-group-3 {
+  label {
+    display: block;
   }
 }
