--- a/profile/modules/apps/os_widgets/css/layout.form.css
+++ b/profile/modules/apps/os_widgets/css/layout.form.css
@@ -26,7 +26,7 @@
 
 .block-place-region:after {
   text-align: center;
-  content: 'Drag block here';
+  content: 'Drag widget here';
   padding: 10px;
   color: gray;
   display: inline-block;
