--- a/profile/modules/vsite/modules/vsite_site_creation/templates/os_site_creation.html
+++ b/profile/modules/vsite/modules/vsite_site_creation/templates/os_site_creation.html
@@ -150,18 +150,18 @@
 					<div class="user-creation-popup panel-heading" ng-show="userCreationOptional" ng-click="showUserCreation = !showUserCreation">Register Account</div>
 					<div class ="popup panel-body" ng-show="showUserCreation">
 						<div class = "popup">
-							<div><label for="desiredUserName">Desired user name</label><input type="text" id="desiredUserName" ng-model="userName" class="form-text form-text-mini" ng-blur="checkUserName()" autocomplete="new-password"></div>
+							<div><label for="desired-user-name">Desired user name</label><input type="text" id="desired-user-name" ng-model="userName" class="form-text form-text-mini" ng-blur="checkUserName()" autocomplete="new-password"></div>
 							<div class="message error" ng-show="showUserError" ng-bind-html="userErrorMsg"></div>
 							<div>Spaces are allowed; punctuation is not allowed except for periods, hyphens, and underscores.</div>
 						</div>
 						<div class = "popup">
-							<div><label for="firstName">First name</label><input type="text" ng-model="fname" id="firstName" class="form-text form-text-mini"></div>
+							<div><label for="firstname">First name</label><input type="text" ng-model="fname" id="firstname" class="form-text form-text-mini"></div>
 						</div>
 						<div class = "popup">
-							<div><label for="lastName">Last name</label><input type="text" id="lastName" ng-model="lname" class="form-text form-text-mini"></div>
+							<div><label for="lastname">Last name</label><input type="text" id="lastname" ng-model="lname" class="form-text form-text-mini"></div>
 						</div>
 						<div class = "popup">
-							<span><label for="emailAddress">Email address</label><input type="text" ng-model="email" id="emailAddress" class="form-text form-text-mini" ng-blur="checkEmail()"></span>
+							<span><label for="email-address">Email address</label><input type="text" ng-model="email" id="email-address" class="form-text form-text-mini" ng-blur="checkEmail()"></span>
 							<div class="message error" ng-show="showEmailError" ng-bind-html="emailErrorMsg"></div>
 							<div>A valid e-mail address is required. All e-mails from OpenScholar will be sent to this address.</div>
 						</div>
@@ -177,7 +177,7 @@
 							</div>
 						</div>
 						<div class = "popup">
-							<div class="form-text-mini"><label for="confirmPassword">Confirm password</label><input type="password" id="confirmPassword" ng-model="confirmPwd" class="form-text form-text-micro" autocomplete="off"><div class="password-strength-text">Password match : {{pwdMatch()}}</div>
+							<div class="form-text-mini"><label for="confirm-password">Confirm password</label><input type="password" id="confirm-password" ng-model="confirmPwd" class="form-text form-text-micro" autocomplete="off"><div class="password-strength-text">Password match : {{pwdMatch()}}</div>
 							</div>
 						</div>
 					</div>
@@ -276,6 +276,7 @@
 									<div ng-bind-html="preset.description"></div>
 									<label class="option">
 										<input type="radio" ng-model="contentOption.value" ng-value="preset.name">
+										<p class="visually-hidden" aria-hidden="true">Select</p>
 										<span></span>
 									</label>
 								</div>
