Issue #12863 - changes citation and slider icon (#12864)

--- a/profile/themes/os_base/scss/component/_widgtes.scss
+++ b/profile/themes/os_base/scss/component/_widgtes.scss
@@ -222,7 +222,7 @@
             }
           }
         }
-        &.slideshow {
+        &.slideshow, &.slider {
           a {
             &:before {
               background-position: -20px -134px;
@@ -243,7 +243,7 @@
             }
           }
         }
-        &.dataverse-dataset, &.dataverse-list, &.dataverse-search-box {
+        &.dataverse-dataset, &.dataverse-list, &.dataverse-search-box, &.dataverse-dataset-citation {
           a {
             &:before {
               background-position: -23px -970px;
