--- a/profile/themes/os_base/templates/node/node--person--full.html.twig
+++ b/profile/themes/os_base/templates/node/node--person--full.html.twig
@@ -82,18 +82,20 @@
     'clearfix',
   ]
 %}
-
-<div class="person--title">
-  <h1>{{ node.label }}</h1>
-  {{content.field_professional_titles}}
-</div>
+{% if page %}
+  <div class="person--title">
+      <h1>{{ node.label }}</h1>
+      {{content.field_professional_titles}}
+  </div>
+{% endif %}
 
 <article{{ attributes.addClass(classes) }}>
 
   {{ title_prefix }}
   {% if not page %}
     <h2{{ title_attributes }}>
-      <a href="{{ url }}" rel="bookmark">{{ label }}</a>
+      <a href="{{ url }}" rel="bookmark">{{ node.label }}</a>
+      {{content.field_professional_titles}}
     </h2>
   {% endif %}
   {{ title_suffix }}
