Issue #12908 - Fix - extra border featured widget person page (#12910)

--- a/profile/themes/os_base/scss/pages/_person.scss
+++ b/profile/themes/os_base/scss/pages/_person.scss
@@ -15,7 +15,7 @@ article.person {
     margin-bottom: 30px;
   }
   .content--main--area {
-    .block {
+    .block-data {
       margin-bottom: 15px;
     }
     .field--label {
@@ -45,7 +45,7 @@ article.person {
 }
 article.person {
   .person-data {
-    .block {
+    .block-data {
       h2.block-title {
         border-top: 3px solid $color-blue;
         padding-top: 12px;
