--- a/profile/themes/os_base/templates/node/node--person--full.html.twig
+++ b/profile/themes/os_base/templates/node/node--person--full.html.twig
@@ -116,7 +116,7 @@
       {{ content.body }}
     </div>
     <div class="content--main--area row person-data">
-      <div class="contact--information block col-sm-6">
+      <div class="contact--information block-data col-sm-6">
         <h2 class="block-title">{% trans %} Contact Information{% endtrans %}</h2>
         {{content.field_address}}
         {{content.field_email}}
@@ -125,7 +125,7 @@
         {% endif %}
         {{content.field_office_hours}}
       </div>
-      <div class="websites--information block col-sm-6">
+      <div class="websites--information block-data col-sm-6">
         <h2 class="block-title">{% trans %} Websites{% endtrans %}</h2>
         {{content.field_website}}
       </div>
