--- a/profile/themes/os_base/scss/global/_fields.scss
+++ b/profile/themes/os_base/scss/global/_fields.scss
@@ -10,6 +10,7 @@
 }
 .field--name-field-professional-titles {
   font-weight: bold;
+  font-size: initial;
 }
 a.class_material_field_class_anchor {
   background: url(../../../themes/os_base/images/scholarbase-sprite.png) 0px -490px no-repeat;
