--- a/profile/themes/os_base/scss/component/_widget-slideshow.scss
+++ b/profile/themes/os_base/scss/component/_widget-slideshow.scss
@@ -34,7 +34,7 @@
   }
 }
 /**** slideshow css ****/
-.widget--slideshow {
+div.widget--slideshow, .slick--optionset--os-slideshow {
   position: relative;
   .field--name-field-slide-image {
     .sr-only {
@@ -46,6 +46,11 @@
     position: absolute;
     color: $color-white;
     padding: 10px 15px;
+    width: 50%;
+    margin: 5% 0 0 5%;
+    left: 0;
+    right: 0;
+    top: 0;
     .field--name-field-slide-headline {
       font-size: 24px;
       line-height: 28px;
@@ -74,6 +79,8 @@
       bottom: 0;
       min-height: 160px;
       padding: 10px 15px 70px;
+      top: auto;
+      margin: 0;
     }
   }
   .slideshow-layout-16-9-below & {
@@ -82,6 +89,8 @@
       background: $color-gray1;
       min-height: 120px;
       padding: 10px 15px 70px;
+      width: 100%;
+      margin: 0;
     }
   }
   .slideshow-layout-16-9-side & {
@@ -106,7 +115,7 @@
     }
   }
 }
-.block--type-slideshow {
+.block.block--type-slideshow, .slick--optionset--os-slideshow {
   .slick__arrow {
     position: absolute;
     bottom: 20px;
