--- a/profile/modules/apps/os_publications/css/os_publications-base.css
+++ b/profile/modules/apps/os_publications/css/os_publications-base.css
@@ -1,3 +1,13 @@
 .path-bibcite .bibcite-reference-form .field--name-html-title .filter-wrapper {
   display: none;
 }
+.os-author-parse-info {
+  font-size: 14px;
+  margin-top: 4px;
+}
+.os-author-parse-info strong {
+  margin-left: 5px;
+}
+.os-author-parse-info strong:first-child {
+  margin-left: 0;
+}
